<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mahasiswa.FormMahasiswa">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/greenDark">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/txt_back"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/txt_detail_data_mahasiswa_menu"
                android:textColor="@color/white"
                android:textSize="24sp" />


        </androidx.appcompat.widget.Toolbar>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/yellow300"
            app:cardCornerRadius="100dp"
            >
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="20dp"
                android:contentDescription="@string/txt_splash_graduation"
                android:src="@drawable/ic_graduation"
                />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/txt_nomor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/etNIP"
                android:autofillHints="name"
                android:inputType="number"
                android:hint="@string/txt_placeholder_nip"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/txt_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/etNama"
                android:autofillHints="name"
                android:inputType="textPersonName"
                android:hint="@string/txt_placeholder_nama"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/txt_tanggal_lahir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/etBirthDate"
                android:autofillHints="name"
                android:inputType="date"
                android:hint="@string/txt_placeholder_birth_date"
                android:layout_marginBottom="10dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView

                android:text="@string/txt_jenis_kelamin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rbLaki"
                    android:text="@string/txt_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/rbPerempuan"
                    android:text="@string/txt_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>

            <TextView
                android:text="@string/txt_alamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/etAlamat"
                android:autofillHints="name"
                android:inputType="textPersonName"
                android:hint="@string/txt_placeholder_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btnSimpan"
            android:backgroundTint="@color/greenDark"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_simpan_data" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>