<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow100"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/greenDark">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/txt_dashboard_menu"
                android:textColor="@color/white"
                android:textSize="24sp" />


        </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/yellow300"
            app:cardCornerRadius="100dp"
            >

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="20dp"
                android:contentDescription="@string/txt_splash_graduation"
                android:src="@drawable/ic_graduation"
                />

        </androidx.cardview.widget.CardView>
        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="10dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:id="@+id/btnLihatData"
            app:icon="@drawable/ic_read_data"
            app:iconPadding="20dp"
            android:text="@string/txt_lihat_data"
            android:textStyle="bold"
            app:cornerRadius="0dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/blue2"
            android:id="@+id/btnInputData"
            app:icon="@drawable/ic_add_data"
            app:iconPadding="20dp"
            android:text="@string/txt_input_data"
            android:textStyle="bold"
            app:cornerRadius="0dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/yellow200"
            android:id="@+id/btnInformasi"
            app:icon="@drawable/ic_info"
            app:iconPadding="20dp"
            android:text="@string/txt_information"
            android:textStyle="bold"
            app:cornerRadius="0dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

    </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>