<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/txt_login_menu"
                    android:textColor="@color/white"
                    android:textSize="24sp" />


            </androidx.appcompat.widget.Toolbar>

           <LinearLayout
               android:id="@+id/loginForm"
               android:orientation="vertical"
               android:padding="24dp"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
               <EditText
                   android:id="@+id/etEmail"
                   android:autofillHints="emailAddress"
                   android:inputType="textEmailAddress"
                   android:hint="@string/txt_placeholder_email"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"/>
               <EditText
                   android:id="@+id/etPassword"
                   android:layout_marginTop="12dp"
                   android:autofillHints="password"
                   android:inputType="textPassword"
                   android:hint="@string/txt_placeholder_password"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"/>
               <com.google.android.material.button.MaterialButton
                   android:id="@+id/btnLogin"
                   app:cornerRadius="0dp"
                   android:layout_width="match_parent"
                   android:text="@string/txt_login_menu"
                   android:textStyle="bold"
                   android:layout_marginTop="10dp"
                   android:layout_height="wrap_content" />
           </LinearLayout>

            <LinearLayout
                android:layout_marginTop="100dp"
                android:id="@+id/alertLoginSuccess"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_selamat_datang"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/black" />
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_login_success"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:textColor="@color/black" />
            </LinearLayout>
        </com.google.android.material.appbar.AppBarLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>